[project]
name = "random-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pacifique000", email = "ngantaangepacifique@gmail.com" },
    { name = "KpihX", email = "kapoivha@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "kagglehub>=0.4.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.1",
    "typer>=0.21.1",
]

[project.scripts]
random-explorer = "random_explorer.cli:app"
valid-input = "random_explorer.scripts.valid_input:main"
plot-environment = "random_explorer.scripts.plot_environment:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
